<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">xuer闹钟</string>
    <string name="addNewClockButton">添加闹钟</string>
    <string name="no_description">未命名闹钟</string>
    <string name="set_clock_msg">添加闹钟: ${time}</string>
    <string name="del_clock_msg">闹钟已删除</string>
    <string name="clock">闹钟</string>
    <string name="description">描述</string>
    <string name="time">00:00 （每天）</string>
    <string name="every_day">每天</string>
    <string name="every_week">每周</string>
    <string name="no_repeat">一次性闹钟</string>
    <string name="login_url">http://www.douban.com/j/app/login</string>
    <string name="get_list_url">http://www.douban.com/j/app/radio/people</string>
    <string name="default_title">正在读取…</string>
    <string name="default_artist">正在读取…</string>
    <string name="time_up">闹钟时间到</string>
    <string name="like">喜欢</string>
    <string name="already_like">已标记为喜欢</string>
    <string name="dislike">不再播放</string>
    <string name="stop">关闭闹钟</string>
    <string name="song_artist">艺术家</string>
    <string name="song_title">歌曲名称</string>
    <string name="cancel">取消</string>
    <string name="clock_detail">设置闹钟</string>
    <string name="ok">确定</string>
    <string name="no_repeat_rb">仅一次</string>
    <string name="every_day_rb">每天</string>
    <string name="mark_as_like">该歌曲已标记为喜欢</string>
    <string name="mark_as_unlike">该歌曲将不再出现闹钟铃声中</string>
    <string name="activate_clock">已为闹钟设置定时器</string>
    <string name="setting">设置</string>
    <string name="Vemail">豆瓣账号（邮箱）</string>
    <string name="Vpassword">豆瓣密码</string>
    <string name="save">保存</string>
    <string name="save_setting">设置已保存</string>
    <string name="description_d">描述</string>
    <string name="repeat_d">重复</string>
    <string name="clock_added">闹钟时间已设置为 {H}：{M}</string>
    <string name="log_err">你的豆瓣用户名或密码错误，因此无法获取音乐</string>
    <string name="v_repeat_song">闹钟播放歌曲数</string>
    <string name="alram_label">闹钟</string>
    <string name="setting_label">设置闹钟</string>
    <string name="next_btn">下一首</string>
    <string name="no_more_song">本次闹钟的{n}首歌曲已播放完毕</string>
    <string name="dmark_as_like">已取消标记</string>
</resources>
