<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/time_up"
            android:id="@+id/clock_msg" android:layout_gravity="center_horizontal"/>
    <Space
            android:layout_width="fill_parent"
            android:layout_height="125dp"
            />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
            android:baselineAligned="false">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/song_title"
                    android:id="@+id/songTitleV" android:clickable="true" android:textSize="20sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/song_artist"
                    android:id="@+id/songArtistV" android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="30dp"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=":"
                    android:id="@+id/u" android:textSize="20sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=":"
                    android:id="@+id/u2" android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" android:layout_weight="1">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/default_title"
                    android:id="@+id/songTitle" android:textSize="20dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/default_artist"
                    android:id="@+id/songArtist" android:textSize="20dp"/>
        </LinearLayout>
    </LinearLayout>
    <Space
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            />
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:id="@+id/stopBtn" android:layout_gravity="center_horizontal"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:id="@+id/nextBtn" android:layout_gravity="center_vertical"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/like"
                android:id="@+id/likeBtn" android:layout_weight="1"/>
        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dislike"
                android:id="@+id/dislikeBtn" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>