<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/cancel_button" android:layout_weight="2"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/clock_detail"
                android:id="@+id/clock_detail_title" android:gravity="center" android:layout_weight="1"
                android:layout_gravity="center"/>
        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:id="@+id/ok_button" android:layout_weight="2"/>
    </LinearLayout>
    <TimePicker
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timePicker" android:layout_gravity="center_horizontal"/>
    <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"/>
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
            >
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_weight="1">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/description_d"
                    android:id="@+id/textView" android:gravity="left|center"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/description" android:inputType="text"
                    />
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/repeat_d"
                    android:id="@+id/textView2" android:gravity="left|center"/>
            <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:orientation="horizontal">
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_repeat_rb"
                        android:id="@+id/no_repeat_rb" android:checked="false"/>
                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/every_day_rb"
                        android:id="@+id/every_day_rb" android:checked="false" android:layout_weight="1"/>
            </RadioGroup>
        </TableRow>
    </TableLayout>
</LinearLayout>